	  feature-request #49.

2016-03-23  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (numval): added missing NUMVAL-C-specific code I missed in
	  r793, causing bug #218.

2016-03-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for
	  bug #216 - store a duplicate of cob_last_sfile for tracing, free on exit

2016-03-15  Ron Norman <rjn@inglenet.com>

	* common.c: display COB_PRE_LOAD as set and as evaluated
	* call.c: clear COB_PRE_LOAD value before evaluating

2016-03-13  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c (locale_time): consolidation still used sizeof(buff) after
	  buff changed from char [] to char *, fixed by introducing LOCTIME_BUFSIZE
	* intrinsic.c (cob_intr_lcl_time_from_secs) re-added missing exception

2016-03-12  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: consolidated copy-and-pasted code in numerous functions,
	  including: SUBSTITUTE(-CASE), NUMVAL(-C), VARIANCE and
	  LOCALE-TIME(-FROM-SECONDS).
	* intrinsic.c: renamed "xqtyear" variables to "current_year".

2016-03-07  Ron Norman <rjn@inglenet.com>

	* fileio.c: fixed EXTFH to save/restore 'opts' value for some
	  READ/WRITE operations. Without this it was not writing LF
	  at end of line sequential records

2016-02-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (set_config_val): removed use of cob_strcat for output of
	  possible values

2016-02-17  Edward Hart <edward.dan.hart@gmail.com>

	* screenio.c (set_default_line_column): fixed bug #202 where screens
	  were displayed at the cursor position when no LINE or COL was given.

2016-02-01  Ron Norman <rjn@inglenet.com>

	* fileio.c: fixed to call cob_set_exception for the EXTFH interface

2016-01-31  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c (split_around_t): fixed stack overflow occuring in wrong
	  date/datetime format strings for FUNCTION TEST-FORMATTED-DATETIME